<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"

            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ban1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ban2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ban3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ban4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ban5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/ban6" />
    </LinearLayout>
</LinearLayout>