<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuList">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"

                app:srcCompat="@drawable/cocktail" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView

                    android:layout_marginTop="25dp"
                    android:id="@+id/textViewName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cocktail"
                    android:textSize="25sp"/>

                <TextView

                    android:id="@+id/textViewPrice1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/price_cocktail" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="31dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:id="@+id/addbutton"
                    android:background="@drawable/add"/>

                <TextView
                    android:id="@+id/textViewAmount1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="0" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:background="@drawable/remove"
                    android:id="@+id/subbutton"
                    android:layout_width="30dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"

                app:srcCompat="@drawable/orangejuice" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="25dp"
                    android:id="@+id/textviewName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orange_juice"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/textViewPrice2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/price_orage_juice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/addbutton2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/add"/>

                <TextView
                    android:id="@+id/textViewAmount2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="0" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:background="@drawable/remove"
                    android:id="@+id/subbutton2"
                    android:layout_width="30dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"

            app:srcCompat="@drawable/juice" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="25dp"
                android:id="@+id/textviewName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/juice"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/textViewPrice3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/price_juice" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/addbutton3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/add"/>

            <TextView
                android:id="@+id/textViewAmount3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="0" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:background="@drawable/remove"
                android:id="@+id/subbutton3"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:layout_height="30dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>
</LinearLayout>